; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/winetests/vbscript/extr_vbscript.c_parse_script.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/winetests/vbscript/extr_vbscript.c_parse_script.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@OnEnterScript = common dso_local global i32 0, align 4
@OnLeaveScript = common dso_local global i32 0, align 4
@S_OK = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [30 x i8] c"ParseScriptText failed: %08x\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i8*)* @parse_script to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @parse_script(i32* %0, i8* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i64, align 8
  store i32* %0, i32** %3, align 8
  store i8* %1, i8** %4, align 8
  %7 = load i32, i32* @OnEnterScript, align 4
  %8 = call i32 @SET_EXPECT(i32 %7)
  %9 = load i32, i32* @OnLeaveScript, align 4
  %10 = call i32 @SET_EXPECT(i32 %9)
  %11 = load i8*, i8** %4, align 8
  %12 = call i32 @a2bstr(i8* %11)
  store i32 %12, i32* %5, align 4
  %13 = load i32*, i32** %3, align 8
  %14 = load i32, i32* %5, align 4
  %15 = call i64 @IActiveScriptParse_ParseScriptText(i32* %13, i32 %14, i32* null, i32* null, i32* null, i32 0, i32 0, i32 0, i32* null, i32* null)
  store i64 %15, i64* %6, align 8
  %16 = load i32, i32* %5, align 4
  %17 = call i32 @SysFreeString(i32 %16)
  %18 = load i64, i64* %6, align 8
  %19 = load i64, i64* @S_OK, align 8
  %20 = icmp eq i64 %18, %19
  %21 = zext i1 %20 to i32
  %22 = load i64, i64* %6, align 8
  %23 = call i32 @ok(i32 %21, i8* getelementptr inbounds ([30 x i8], [30 x i8]* @.str, i64 0, i64 0), i64 %22)
  %24 = load i32, i32* @OnEnterScript, align 4
  %25 = call i32 @CHECK_CALLED(i32 %24)
  %26 = load i32, i32* @OnLeaveScript, align 4
  %27 = call i32 @CHECK_CALLED(i32 %26)
  ret void
}

declare dso_local i32 @SET_EXPECT(i32) #1

declare dso_local i32 @a2bstr(i8*) #1

declare dso_local i64 @IActiveScriptParse_ParseScriptText(i32*, i32, i32*, i32*, i32*, i32, i32, i32, i32*, i32*) #1

declare dso_local i32 @SysFreeString(i32) #1

declare dso_local i32 @ok(i32, i8*, i64) #1

declare dso_local i32 @CHECK_CALLED(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
